--- a/AlexWilliamsResume.tex
+++ b/AlexWilliamsResume.tex
@@ -27,7 +27,7 @@
            & B.S. in Mathematics (minor in Physics) & Fall 2002 - May 2005\\
 \\
 \underline{EXPERIENCE} & The Yoga Stand & Lubbock, TX\\
-           & Senior/Lead Software Developer & May 2016 - Nov. 2016\\
+           & Yoga Instructor & May 2015 - Nov. 2015\\
            & \multicolumn{2}{p{14cm}}{$\bullet$ Received several hugs and compliments after the classes I led.}\\
 \\					
 & Fund Accounting Solution Technologies, Inc. & Lubbock, TX\\
