--- a/AlexWilliamsResume.tex
+++ b/AlexWilliamsResume.tex
@@ -16,7 +16,7 @@
 \noindent\LARGE{\textbf{Alexander Williams}}\normalsize{}\\
 \hspace{-1em}\begin{tabular}[h]{@{}p{3.25cm}@{}lr}
 \hline\\
-\underline{CONTACT} & 1802 66th St. Apt 12, Lubbock, TX 79412 & alejandros\_son@ttu.edu \\
+\underline{CONTACT} & 1802 66th St. Apt 12, Lubbock, TX 79412 & alejandros\_son@yahoo.com \\
 \underline{INFORMATION} &  & (806)-438-5504\\
 \\
 \underline{OBJECTIVE} &  \multicolumn{2}{p{14cm}}{To provide great value while I continue to develop professionally.}\\
