--- a/AlexWilliamsResume.tex
+++ b/AlexWilliamsResume.tex
@@ -59,7 +59,7 @@ Methods, Calculus III, Calculus II, and Precalculus.}\\
 \\
 \underline{PROFICIENCES}\\    
            & \multicolumn{2}{p{14cm}}{$\bullet$ Integration and customization with jQuery and many of its plugins.}\\
-           & \multicolumn{2}{p{14cm}}{$\bullet$ Effective use of LinqPad and Visual Studio for C# development.}\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Effective use of LinqPad and Visual Studio for C\# development.}\\
            & \multicolumn{2}{p{14cm}}{$\bullet$ Successfully used ASP.NET MVC (3-5) and Entity Framework 6.0.}\\					
 \\
 \underline{FUN FACTS}\\    
