01/18/17 Update.  Added StarCare and Intrepidus Labs.

--- a/AlexWilliamsResume.tex
+++ b/AlexWilliamsResume.tex
@@ -16,7 +16,7 @@
 \noindent\LARGE{\textbf{Alexander Williams}}\normalsize{}\\
 \hspace{-1em}\begin{tabular}[h]{@{}p{3.25cm}@{}lr}
 \hline\\
-\underline{CONTACT} & 1802 66th St. Apt 12, Lubbock, TX 79412 & alejandros\_son@yahoo.com \\
+\underline{CONTACT} & 1805 79th Pl., Lubbock, TX 79423 & alejandros\_son@yahoo.com \\
 \underline{INFORMATION} &  & (806)-438-5504\\
 \\
 \underline{OBJECTIVE} &  \multicolumn{2}{p{14cm}}{To provide great value while I continue to develop professionally.}\\
@@ -26,10 +26,20 @@
            & M.S. in Mathematics  & June 2005 - June 2006\\                       
            & B.S. in Mathematics (minor in Physics) & Fall 2002 - May 2005\\
 \\
-\underline{EXPERIENCE} & The Yoga Stand & Lubbock, TX\\
+\underline{EXPERIENCE} & StarCare Specialty Health System & Lubbock, TX\\
+           & Programmer V & April 2016 - Present\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Developed an open-source web service used by various agencies:}\\
+					& https://github.com/txace/LTSS-NIEM\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Responsible for migrating the organization's legacy system to their new system.}\\           
+\\
+&  Intrepidus Labs (DBA) & Lubbock, TX\\
+           & Principal investigator (to be) & October 2015 - February 2016\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Planned to lead an AI project to create a series general purposes algorithms that would learn how to move semi-arbitrary robotic arms given a visual goal.} \\        
+\\                    
+& The Yoga Stand & Lubbock, TX\\
            & Yoga Instructor & May 2015 - Nov. 2015\\
            & \multicolumn{2}{p{14cm}}{$\bullet$ Received several hugs and compliments after the classes I led.}\\
-\\					
+\\          				
 & Fund Accounting Solution Technologies, Inc. & Lubbock, TX\\
            & Senior/Lead Software Developer & Feb. 2012 - June 2015\\
            & \multicolumn{2}{p{14cm}}{$\bullet$ Was actively involved in the design and implementation of several features, such as groups,
@@ -49,7 +59,9 @@ integration with 3rd parties, cash receipting, and a municipal court module.}\\
            & \multicolumn{2}{p{14cm}}{$\bullet$ Consistently improved closing average over the first six months.}\\
            & \multicolumn{2}{p{14cm}}{$\bullet$ Successfully recruited, interviewed, hired, and trained 6+ sales representatives.}\\
            & \multicolumn{2}{p{14cm}}{$\bullet$ Personally supervised and gave feedback to the sales representatives.}\\
-\\
+\end{tabular}	
+\newpage				
+\hspace{-1em}\begin{tabular}[h]{@{}p{3.25cm}@{}lr}
 						& Texas Tech University & Lubbock, TX\\
 						& Graduate Part-time Instructor	 &  Fall 2005 - Fall 2010\\
            & \multicolumn{2}{p{14cm}}{$\bullet$ Taught Trigonometry, College Algebra, Business Calculus, Finite Mathematics, Statistical
@@ -58,14 +70,16 @@ Methods, Calculus III, Calculus II, and Precalculus.}\\
            & \multicolumn{2}{p{14cm}}{$\bullet$ Assisted computer administration with software and hardware updates.}\\
 \\
 \underline{PROFICIENCES}\\    
-           & \multicolumn{2}{p{14cm}}{$\bullet$ Integration and customization with jQuery and many of its plugins.}\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Javascript libraries including jQuery and D3. Proficient with MVC and SAM patterns.}\\
            & \multicolumn{2}{p{14cm}}{$\bullet$ Effective use of LinqPad and Visual Studio for C\# development.}\\
-           & \multicolumn{2}{p{14cm}}{$\bullet$ Successfully used ASP.NET MVC (3-5) and Entity Framework 6.0.}\\					
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Moderate experience with Django and Anaconda.}\\					
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Can manipulate data rather well via ORMs, SQL, or hand-crafted tools.}\\						
 \\
-\underline{FUN FACTS}\\    
-           & \multicolumn{2}{p{14cm}}{$\bullet$ I developed an online implementation of a board game at yucata.de.}\\
-           & \multicolumn{2}{p{14cm}}{$\bullet$ I have participated at the new maker space ULabs.}\\
-           & \multicolumn{2}{p{14cm}}{$\bullet$ I've been studying clojure, AI, and Farsi.}\\					
+\underline{FUN FACTS}\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Investigating whether L = ALOGTIME and learning Farsi in my spare time.}\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Invented a significantly faster Quine-Mcklusky algorithm.}\\ 					
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Implemented an online board game: http://www.yucata.de/en/GameInfo/SevenSteps.}\\
+          & \multicolumn{2}{p{14cm}}{$\bullet$ Screencast of an algorithm I invented: https://www.youtube.com/watch?v=O\_fom70lck4.}\\			          
 \\					  				
 \end{tabular}
 \end{document}
