Updated for some more specific accomplishments at StarCare.

--- a/AlexWilliamsResume.tex
+++ b/AlexWilliamsResume.tex
@@ -16,7 +16,7 @@
 \noindent\LARGE{\textbf{Alexander Williams}}\normalsize{}\\
 \hspace{-1em}\begin{tabular}[h]{@{}p{3.25cm}@{}lr}
 \hline\\
-\underline{CONTACT} & 1805 79th Pl., Lubbock, TX 79423 & alejandros\_son@yahoo.com \\
+\underline{CONTACT} & 1805 79th Pl., Lubbock, TX 79423 & implementnap@gmail.com \\
 \underline{INFORMATION} &  & (806)-438-5504\\
 \\
 \underline{OBJECTIVE} &  \multicolumn{2}{p{14cm}}{To provide great value while I continue to develop professionally.}\\
@@ -30,7 +30,9 @@
            & Programmer V & April 2016 - Present\\
            & \multicolumn{2}{p{14cm}}{$\bullet$ Developed an open-source web service used by various agencies:}\\
 					& https://github.com/txace/LTSS-NIEM\\
-           & \multicolumn{2}{p{14cm}}{$\bullet$ Responsible for migrating the organization's legacy system to their new system.}\\           
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Migrated the organization's legacy system to their new system.}\\           
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Reduced the use of spreadsheets and enabled accounting to allocate a new GL.}\\   					
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Wrote several internal tools to enable automation of various processes.}\\ 					
 \\
 &  Intrepidus Labs (DBA) & Lubbock, TX\\
            & Principal investigator (to be) & October 2015 - February 2016\\
@@ -72,11 +74,11 @@ Methods, Calculus III, Calculus II, and Precalculus.}\\
 \underline{PROFICIENCES}\\    
            & \multicolumn{2}{p{14cm}}{$\bullet$ Javascript libraries including jQuery and D3. Proficient with MVC and SAM patterns.}\\
            & \multicolumn{2}{p{14cm}}{$\bullet$ Effective use of LinqPad and Visual Studio for C\# development.}\\
-           & \multicolumn{2}{p{14cm}}{$\bullet$ Moderate experience with Django and Anaconda.}\\					
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Moderate experience with microcontrollers.}\\					
            & \multicolumn{2}{p{14cm}}{$\bullet$ Can manipulate data rather well via ORMs, SQL, or hand-crafted tools.}\\						
 \\
 \underline{FUN FACTS}\\
-           & \multicolumn{2}{p{14cm}}{$\bullet$ Investigating whether L = ALOGTIME and learning Farsi in my spare time.}\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Taken several classes at edX.org including AI, Machine Learning, and Robot Mechanics.}\\
            & \multicolumn{2}{p{14cm}}{$\bullet$ Invented a significantly faster Quine-Mcklusky algorithm.}\\ 					
            & \multicolumn{2}{p{14cm}}{$\bullet$ Implemented an online board game: http://www.yucata.de/en/GameInfo/SevenSteps.}\\
           & \multicolumn{2}{p{14cm}}{$\bullet$ Screencast of an algorithm I invented: https://www.youtube.com/watch?v=O\_fom70lck4.}\\			          
