--- a/AlexWilliamsResume.tex
+++ b/AlexWilliamsResume.tex
@@ -19,15 +19,34 @@
 \underline{CONTACT} & 1805 79th Pl., Lubbock, TX 79423 & implementnap@gmail.com \\
 \underline{INFORMATION} &  & (806)-438-5504\\
 \\
-\underline{OBJECTIVE} &  \multicolumn{2}{p{14cm}}{To provide great value while I continue to develop professionally.}\\
+\underline{OBJECTIVE} &  \multicolumn{2}{p{14cm}}{To make the world a better place one solution at a time.}\\
 \\
 \underline{EDUCATION} & Texas Tech University & Lubbock, TX\\
            & Ph.D. in Mathematics & July 2006 - August 2010\\            
            & M.S. in Mathematics  & June 2005 - June 2006\\                       
            & B.S. in Mathematics (minor in Physics) & Fall 2002 - May 2005\\
 \\
-\underline{EXPERIENCE} & StarCare Specialty Health System & Lubbock, TX\\
-           & Programmer V & April 2016 - Present\\
+\underline{EXPERIENCE} & Self-employeed & Remote\\
+           & Independent Researcher \& Developer & May 2017 - Present\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Built an algorithm to arranges text blocks in the most eye pleasing way possible.}\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Built an algorithm to minimize time from order to delivery for a factory. }\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Built a web interface that allowed a client to automate their email campaign via Amazon SES. }\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Built an algorithm to maximize the number of windows that can fit on a set of pallets. }\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Built an algorithm to score trademark key words. }\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Created a real-time Shopify inventory syncing solution. }\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Created a real-time Shopify inventory syncing solution. }\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Created meal planner algorithm. }\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Created algorithm for ideal sports pair scheduling. }\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Wrote employee tracking code for PCs. }\\
+           & Freedom R\&D & Remote\\
+           & Chief Administrator & March 2020 - Present\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Freedom R\&D promtes freedom and delivers open innovation and education.}\\        
+           & Oodlebit Inc. & Remote\\
+           & Developer & October 2018 - June 2019\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Developed a cryptocurrency trade engine.}\\
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Integrated the trade engine with the frontend(s) and notification system.}\\           
+           & StarCare Specialty Health System & Lubbock, TX\\
+           & Programmer V & April 2016 - September 2018\\
            & \multicolumn{2}{p{14cm}}{$\bullet$ Developed an open-source web service used by various agencies:}\\
 					& https://github.com/txace/LTSS-NIEM\\
            & \multicolumn{2}{p{14cm}}{$\bullet$ Migrated the organization's legacy system to their new system.}\\           
@@ -72,16 +91,16 @@ Methods, Calculus III, Calculus II, and Precalculus.}\\
            & \multicolumn{2}{p{14cm}}{$\bullet$ Assisted computer administration with software and hardware updates.}\\
 \\
 \underline{PROFICIENCES}\\    
-           & \multicolumn{2}{p{14cm}}{$\bullet$ Javascript libraries including jQuery and D3. Proficient with MVC and SAM patterns.}\\
            & \multicolumn{2}{p{14cm}}{$\bullet$ Effective use of LinqPad and Visual Studio for C\# development.}\\
-           & \multicolumn{2}{p{14cm}}{$\bullet$ Moderate experience with microcontrollers.}\\					
-           & \multicolumn{2}{p{14cm}}{$\bullet$ Can manipulate data rather well via ORMs, SQL, or hand-crafted tools.}\\						
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Can craft reliable Javascript, CSS, and HTML code.}\\           
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Can automate mostly any repetetive computer-based process. }\\					
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Can extract, transform, load, migrate, analyze, optimize, visualize, and actionablify data.}\\						
 \\
 \underline{FUN FACTS}\\
            & \multicolumn{2}{p{14cm}}{$\bullet$ Taken several classes at edX.org including AI, Machine Learning, and Robot Mechanics.}\\
            & \multicolumn{2}{p{14cm}}{$\bullet$ Invented a significantly faster Quine-Mcklusky algorithm.}\\ 					
            & \multicolumn{2}{p{14cm}}{$\bullet$ Implemented an online board game: http://www.yucata.de/en/GameInfo/SevenSteps.}\\
-          & \multicolumn{2}{p{14cm}}{$\bullet$ Screencast of an algorithm I invented: https://www.youtube.com/watch?v=O\_fom70lck4.}\\			          
+           & \multicolumn{2}{p{14cm}}{$\bullet$ Screencast of an algorithm I invented: https://www.youtube.com/watch?v=O\_fom70lck4.}\\			          
 \\					  				
 \end{tabular}
 \end{document}
